--- a/src/components/ProfileSubComponents/Students/studentssub.css
+++ b/src/components/ProfileSubComponents/Students/studentssub.css
@@ -1,24 +1,26 @@
-.profileContainer{
-    top:0;
+.profileContainer1{
     width: 100%;
-    max-height: 950px;
-    height: 850px;
-    
+    height: 100vh;
+    background-image: url('../../../assets/containerBg.jpg');
+    background-size: cover;
+    background-repeat: repeat-y;
 }
 
-.profileWrapper{
+.profileWrapper1{
         width: 850px;
-        height: 850px;
-        margin: 0% 20%;
+        height: 750px;
+        margin: 0% 23%;
+        background-color: white;
         /* background-color: blue; */
         display: flex;
-        border: 0.5px solid grey;
+        border: 0.3px solid lightgray;
         border-radius: 10px;
+        border-bottom: 4px solid #2e1cc4;
         align-self: center;
         
 }
 
-.profileContent{
+.profileContent1{
     width: 100%;
     height: 100%;
     margin-top: 0px;
@@ -29,11 +31,11 @@
     justify-content: center; */
 }
 
-.logo{
-    margin: 35% 25%;
+.logo1{
+    margin: 15% 25%;
 }
 
-.name{
+.name1{
     margin-top:10px;
     padding:0;
     display: flex;
@@ -41,14 +43,14 @@
     justify-content: center;
 }
 
-.left{
+.left1{
     flex:0.3;
     flex-direction: row;
     align-items: center;
     justify-content: center;
 }
 
-.leftContainer{
+.leftContainer1{
     margin : 10% 15%;
     width: 100%;
     height: 90%;
@@ -57,14 +59,17 @@
     border-bottom: 4px solid #2e1cc4;
 }
 
-.leftBottomContainer{
-    padding-top: 10px;
-    padding-left: 13%;
+.leftBottomContainer1{
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 3%;
+    /* padding-top: 10px; */
+    padding-left: 2%;
     
     
 }
 
-.right{
+.right1{
     flex:0.7;
     flex-direction: row;
     align-items: center;
@@ -72,35 +77,36 @@
     
 }
 
-.formContent{
+.formContent1{
     display: flex;
     justify-content: space-evenly;
     margin:0px 45px
     /* align-self: center; */
 }
 
-.formValues{
+.formValues1{
     display: flex;
     flex-direction: row;
     padding-top: 40px;
     
 }
 
-.formItems{
+.formItems1{
     display: flex;
     flex-direction: row;
 
 
 }
 
-.keysAndSchoolInfo{
+.keysAndSchoolInfo1{
     padding-top: 40px;
     display: flex;
     flex-direction: column;
 }
 
-.updatebuttons{
+.updatebuttons1{
     display: 'flex';
+    align-self: center;
     flex-direction: 'column'; 
    
     /* margin:120px; */
