--- a/src/components/Question/question.css
+++ b/src/components/Question/question.css
@@ -46,6 +46,10 @@
     width: 100%;
     justify-content: space-around;
   }
+
+  .controls:nth-child(2){
+    padding-right: 30px;
+  }
   
   .select {
     background-color: rgb(7, 207, 0);
