--- a/src/components/Quiz/quiz.css
+++ b/src/components/Quiz/quiz.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 20px;
     font-family: "Poppins", sans-serif;
   }
   
