--- a/src/components/SignupPage/signup.css
+++ b/src/components/SignupPage/signup.css
@@ -1,14 +1,13 @@
 .signinContainer{
-    width: 100%;
-    max-height: 950px;
+    width: 100vw;
     height: 850px;
-    
+    display: flex;
     }
 
 .signinWrapper{
     width: 850px;
     height: 750px;
-    margin: 3% 25%;
+    margin: 4% 25%;
     /* background-color: blue; */
     display: flex;
     align-self: center;
@@ -73,7 +72,7 @@ margin:0px 55px
 .bottomContent{
 display: flex;
 justify-content: space-evenly;
-margin:0px 55px
+margin-top: -50px;
 
 }
 
