--- a/src/components/common/Profile/profile.css
+++ b/src/components/common/Profile/profile.css
@@ -1,14 +1,17 @@
 .profileContainer{
     width: 100%;
-    max-height: 950px;
-    height: 850px;
+    /* overflow: hidden; */
+    height: 100vh;
+    background-image: url('../../../assets/containerBg.jpg');
+    background-size: cover;
+    background-repeat: repeat-y;
     
 }
 
 .profileWrapper{
         width: 850px;
-        height: 750px;
-        margin: 20% 30%;
+        height: 850px;
+        margin: 0% 23%;
         /* background-color: blue; */
         display: flex;
         align-self: center;
@@ -28,21 +31,22 @@
 
 .logo{
     margin: 15% 0%;
-    padding-right:30%;
-    padding:'25px';
+    padding-left: 30%;
     display: flex;
-    /* align-items: center; */
-    justify-content: center;
+    align-self: center;
+    /* align-self: center; */
 }
 
 .name{
     margin-top:10px;
+    padding:0;
     display: flex;
     /* align-items: center; */
     justify-content: center;
 }
 
 .left{
+    
     flex:0.3;
     flex-direction: row;
     align-items: center;
@@ -50,10 +54,9 @@
 }
 
 .leftContainer{
-    
-    margin : 30% 5%;
+    margin : 15% 15%;
     width: 100%;
-    height: 90%;
+    height: 100%;
     border: 2px solid grey;
     border-radius: 10px;
     border-bottom: 4px solid #2e1cc4;
@@ -66,6 +69,12 @@
 
 .right{
     flex:0.7;
+    padding-top: -10px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    /* width: 100%; */
+    /* height: 90%; */
     
 }
 
